# jane

./: .editorconfig  CMakeLists.txt  README.md  TODO.txt
src/: asset_manager.cpp  asset_manager.h  component.cpp  component.h  component_manager.cpp  component_manager.h  entity.cpp  entity.h  game.cpp  game.h  input_manager.cpp  input_manager.h  main.cpp  scene.cpp  scene.h  types.cpp  types.h
src/components/: cam.cpp  cam.h  camera.cpp  camera.h  demo_attractor.cpp  demo_attractor.h  demo_attractor_action.cpp  demo_attractor_action.h  demo_manager.cpp  demo_manager.h  interaction.cpp  interaction.h  sprite.cpp  sprite.h  text.cpp  text.h  transform.cpp  transform.h  world_button.cpp  world_button.h
src/entities/: box.cpp  box.h
